# koan

./: .gitignore  Cargo.toml  LICENSE  README.md  fib.koan  foo.koan  llvmirdebugoutput.llvm
.cargo/: config.toml
.github/workflows/: releases.yml
benches/: ast.rs
src/: compiler.rs  error.rs  expr.rs  inferance.rs  inference.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pool.rs  repl.rs  state.rs  value.rs  vm.rs
src/compiler/: llvalue.rs
src/parser/: utils.rs
stdlib/: Makefile  stdlib.c  stdtest.c  stdtest.ll
syntax/: koan.sublime-syntax
