[package]
name = "koan"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = { version = "14.0.0", features = ["derive"], optional = true }
syntect = { version = "5.2.0", optional = true }
thiserror = "1.0.62"

[features]
default = ["repl"]
repl = ["dep:rustyline", "dep:syntect"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

