[package]
name = "koan"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = { version = "14.0.0", features = ["derive"], optional = true }
syntect = { version = "5.2.0", optional = true }
thiserror = "1.0.62"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "ast"
harness = false

[features]
default = ["repl"]
repl = ["dep:rustyline", "dep:syntect"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

